# smtf

./: Cargo.toml  README.md
src/: crypto.rs  handshake.rs  helper.rs  index.html  lib.rs  main.rs  package-lock.json  package.json  state.rs  transfer.rs  ui.rs  vite.config.ts
src/src/: App.vue
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/src/: crypto.rs  handshake.rs  lib.rs  main.rs  transfer.rs
