[package]
name = "smtf"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 1

[profile.dev.package."*"]
debug = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0.100"
base32 = "0.5.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
rand = "0.9.2"
hkdf = "0.12.4"
hex-literal = "0.4.1"
sha2 = "0.10.9"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
zeroize = "1.8.2"
blake3 = "1.8.2"
rfd = "0.17.1"
egui = "0.33.3"
eframe = { version = "0.33.3", features = ["wgpu"] }
env_logger = "0.11.8"
arboard = "3.6.1"
infer = "0.19.0"
chrono = "0.4.42"

